--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <title>TheNFTMasterclass</title>
   </head>
   <body>
+    jskdalfjsl
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
